--- a/tp02.html
+++ b/tp02.html
@@ -26,19 +26,19 @@
       </div>
       <div class="my-1">
         <label for="server">Mot de passe</label>
-        <input type="text" class="form-control" v-model="connectionSettings.password" placeholder="aucun">
+        <input type="password" class="form-control" v-model="connectionSettings.password" placeholder="aucun">
       </div>
       <div class="my-1">
         <label for="server">Base de données</label>
-        <input type="text" class="form-control" v-model="connectionSettings.dbName" placeholder="aucun">
+        <input type="text" class="form-control" v-model="connectionSettings.dbName" placeholder="aucun" readonly>
       </div>
       <div class="my-1">
         <label><input type="checkbox" v-model="connectionSettings.dropAndCreateDatabase"> Supprimer et recréer la base
           de données</label>
       </div>
       <div class="my-1">
-        <button type="button" class="btn btn-primary" v-if="currQuestion == 0"
-          v-on:click="connectToServer(0)">Connecter</button>
+        <button type="button" class="btn btn-primary" v-on:click="connectToServer(0)">Connecter</button>
+        <button type="button" class="btn btn-danger" v-on:click="resetAnswersClicked()">Effacer les réponses...</button>
       </div>
       <div class="my-1 text-danger" v-if="!isSuccess[0]" v-html="msg[0]"></div>
       <div class="my-1 text-success" v-if="isSuccess[0]" v-html="msg[0]"></div>
@@ -68,11 +68,11 @@
             </div>
             <div class="my-1 text-danger" v-if="!isSuccess[li.queryParams.numQuery]"
               v-html="msg[li.queryParams.numQuery]"></div>
-            <div class="my-1 text-success" v-if="isSuccess[li.queryParams.numQuery]"
+            <div class="my-1 text-success d-print-none" v-if="isSuccess[li.queryParams.numQuery]"
               v-html="msg[li.queryParams.numQuery]"></div>
-            <div class="my-1">
+            <div class="my-1 d-print-none">
               <button type="button" class="btn"
-                v-bind:class="{'btn-primary': executionCount[li.queryParams.numQuery] == 0, 'btn-secondary': executionCount[li.queryParams.numQuery] <= minExecCount, 'btn-success': executionCount[li.queryParams.numQuery] > minExecCount}"
+                v-bind:class="{'btn-primary': executionCount[li.queryParams.numQuery] == 0, 'btn-secondary': executionCount[li.queryParams.numQuery] > 0 && executionCount[li.queryParams.numQuery] <= minExecCount, 'btn-success': executionCount[li.queryParams.numQuery] > minExecCount}"
                 v-on:click="executeQuery(li.queryParams.numQuery)">Exécuter
                 la requête [{{executionCount[li.queryParams.numQuery]}}]</button>
             </div>
@@ -221,7 +221,7 @@
           Créer la table <code>vehicules</code>.
           <p>Les enregistrement de la table sont identifiés par la colonne <code>matricule</code>.</p>
         </div>
-        <div class="query" data-typecontrol="textarea" data-rows="6" data-numquery="2"></div>
+        <div class="query" data-typecontrol="textarea" data-rows="6"></div>
         <pre class="userQuery">CREATE TABLE vehicules</pre>
         <pre class="correctQuery">CREATE TABLE vehicules (
   matricule VARCHAR(10) PRIMARY KEY NOT NULL,
@@ -235,7 +235,7 @@
           Créer la table <code>clients</code>.
           <p>Les enregistrement de la table sont identifiés par la colonne <code>cin</code>.</p>
         </div>
-        <div class="query" data-typecontrol="textarea" data-rows="6" data-numquery="3"></div>
+        <div class="query" data-typecontrol="textarea" data-rows="6"></div>
         <pre class="userQuery">CREATE TABLE clients</pre>
         <pre class="correctQuery">CREATE TABLE clients (
   cin VARCHAR(10) PRIMARY KEY,
@@ -249,7 +249,7 @@
           Créer la table <code>locations</code>.
           <p>Les enregistrement de la table sont identifiés par la colonne <code>num_location</code>.</p>
         </div>
-        <div class="query" data-typecontrol="textarea" data-rows="16" data-numquery="4"></div>
+        <div class="query" data-typecontrol="textarea" data-rows="16"></div>
         <pre class="userQuery">CREATE TABLE locations</pre>
         <pre class="correctQuery">CREATE TABLE locations (
   num_location INT PRIMARY KEY AUTO_INCREMENT,
@@ -269,6 +269,12 @@
 );</pre>
       </li>
       <li>
+        <div class="question">Afficher la liste des tables créées.</div>
+        <div class="query" data-typecontrol="textarea" data-rows="1"></div>
+        <pre class="userQuery">SHOW TABLES;</pre>
+        <pre class="correctQuery">SHOW TABLES;</pre>
+      </li>
+      <li>
         <div class="question">Remplir la table <code>clients</code> par les données suivantes :
           <pre style="font-size: 0.8em;"><code class="nohighlight">+----------+--------+-------+----------+
 | cin      | client | genre | tel      |
@@ -278,7 +284,7 @@
 | 04202363 | Aziz   | M     | 70116709 |
 +----------+--------+-------+----------+</code></pre>
         </div>
-        <div class="query" data-typecontrol="textarea" data-rows="4" data-numquery="5"></div>
+        <div class="query" data-typecontrol="textarea" data-rows="4"></div>
         <pre class="userQuery">INSERT INTO clients (cin, client, genre, tel)
 VALUES (...),
     (...),
@@ -287,6 +293,12 @@ VALUES (...),
 VALUES ('03972583', 'Amir', 'M', '36704253'),
     ('04202363', 'Aziz', 'M', '70116709'),
     ('02500463', 'Hajer', 'F', '36079515');</pre>
+      </li>
+      <li>
+        <div class="question">Afficher la liste des clients insérés dans la table <code>clients</code>.</div>
+        <div class="query" data-typecontrol="textarea" data-rows="1"></div>
+        <pre class="userQuery">SELECT ...;</pre>
+        <pre class="correctQuery">SELECT * FROM clients;</pre>
       </li>
       <li>
         <div class="question">Remplir la table <code>vehicules</code> par les données suivantes :
@@ -305,7 +317,7 @@ VALUES ('03972583', 'Amir', 'M', '36704253'),
 | 207TU8780 | Clio 5           |        70 | O     |
 +-----------+------------------+-----------+-------+ </code></pre>
         </div>
-        <div class="query" data-typecontrol="textarea" data-rows="11" data-numquery="6"></div>
+        <div class="query" data-typecontrol="textarea" data-rows="11"></div>
         <pre class="userQuery">INSERT INTO vehicules (matricule, vehicule, prix_unit, libre)
 VALUES (...),
     (...),
@@ -330,6 +342,12 @@ VALUES ('200TU4906', 'Clio 4', 60, 'O'),
     ('207TU8780', 'Clio 5', 70, 'O');</pre>
       </li>
       <li>
+        <div class="question">Afficher la liste des véhicules insérés dans la table <code>vehicules</code>.</div>
+        <div class="query" data-typecontrol="textarea" data-rows="1"></div>
+        <pre class="userQuery">SELECT ...;</pre>
+        <pre class="correctQuery">SELECT * FROM vehicules;</pre>
+      </li>
+      <li>
         <div class="question">Remplir la table <code>locations</code> par les données suivantes :
           <pre style="font-size: 0.8em;"><code class="nohighlight">+--------------+-----------+----------+---------------+-------------+------------------+
 | num_location | matricule | cin      | date_location | date_retour | montant_location |
@@ -350,7 +368,7 @@ VALUES ('200TU4906', 'Clio 4', 60, 'O'),
 |           14 | 204TU9333 | 03972583 | 2022-01-28    | 2022-02-01  |              240 |
 +--------------+-----------+----------+---------------+-------------+------------------+</code></pre>
         </div>
-        <div class="query" data-typecontrol="textarea" data-rows="15" data-numquery="7"></div>
+        <div class="query" data-typecontrol="textarea" data-rows="15"></div>
         <pre class="userQuery">INSERT INTO locations (num_location, matricule, cin, date_location, date_retour, montant_location)
 VALUES (...),
     (2, '206TU5473', '04202363', '2022-01-02', '2022-01-03', 80),
@@ -366,8 +384,7 @@ VALUES (...),
     (12, '207TU4480', '04202363', '2022-01-24', '2022-01-25', 80),
     (13, '205TU9334', '04202363', '2022-01-28', '2022-02-03', 420),
     (14,'204TU9333', '03972583', '2022-01-28', '2022-02-01', 240);</pre>
-      </li>
-      <pre class="correctQuery">INSERT INTO locations (num_location, matricule, cin, date_location, date_retour, montant_location)
+        <pre class="correctQuery">INSERT INTO locations (num_location, matricule, cin, date_location, date_retour, montant_location)
 VALUES (1, '203TU4480', '03972583', '2022-01-02', '2022-01-03', 80),
     (2, '206TU5473', '04202363', '2022-01-02', '2022-01-03', 80),
     (3, '203TU8041', '04202363', '2022-01-05', '2022-01-06', 60),
@@ -384,11 +401,17 @@ VALUES (1, '203TU4480', '03972583', '2022-01-02', '2022-01-03', 80),
     (14,'204TU9333', '03972583', '2022-01-28', '2022-02-01', 240);</pre>
       </li>
       <li>
+        <div class="question">Afficher la liste des locations insérés dans la table <code>locations</code>.</div>
+        <div class="query" data-typecontrol="textarea" data-rows="1"></div>
+        <pre class="userQuery">SELECT ...;</pre>
+        <pre class="correctQuery">SELECT * FROM locations;</pre>
+      </li>
+      <li>
         <div class="question">Ajouter le nouveau client &laquo; Youssef &raquo; son <strong>cin</strong> est
           &laquo; 12569800 &raquo; et son <b>téléphone</b> est &laquo; 52349157 &raquo;.</div>
-        <div class="query" data-typecontrol="textarea" data-rows="2" data-numquery="8"></div>
-        <pre class="userQuery">INSERT INTO clients (cin, client, genre, tel)
-VALUES ('12569800', 'Youssef', 'M', 52349157);</pre>
+        <div class="query" data-typecontrol="textarea" data-rows="2"></div>
+        <pre class="userQuery">INSERT INTO clients (...)
+VALUES (...);</pre>
         <pre class="correctQuery">INSERT INTO clients (cin, client, genre, tel)
 VALUES ('12569800', 'Youssef', 'M', 52349157);</pre>
       </li>
@@ -401,7 +424,7 @@ VALUES ('Assia', '12650890');</code></pre>
           <pre><code class="nohighlight">ERROR 1364 (HY000): Field 'tel' doesn't have a default value</code></pre>
           <p><strong>Quel est le problème ? Comment le corriger ?</strong></p>
         </div>
-        <div class="query" data-typecontrol="textarea" data-rows="2" data-numquery="9"></div>
+        <div class="query" data-typecontrol="textarea" data-rows="2"></div>
         <pre class="correctQuery">INSERT INTO clients (client, cin)
 VALUES ('Assia', '12650890');</pre>
         <pre class="userQuery">INSERT INTO clients (client, cin)
@@ -413,7 +436,7 @@ VALUES ('Assia', '12650890');</pre>
           <pre><code class="sql">INSERT INTO clients (client, cin, tel)
 VALUES ('Assia', '12650890', '52349157');</code></pre>
         </div>
-        <div class="query" data-typecontrol="textarea" data-rows="2" data-numquery="10"></div>
+        <div class="query" data-typecontrol="textarea" data-rows="2"></div>
         <pre class="correctQuery">INSERT INTO clients (client, cin, tel)
 VALUES ('Assia', '12650890', '52349157');</pre>
         <pre class="userQuery">INSERT INTO clients (client, cin, tel)
@@ -424,21 +447,21 @@ VALUES ('Assia', '12650890', '52349157');</pre>
           <p>Puis, pour vérifier qu'elle a été insérée :</p>
           <pre><code class="sql">SELECT * FROM clients WHERE cin = '12650890';</code></pre>
         </div>
-        <div class="query" data-typecontrol="textarea" data-rows="1" data-numquery="11"></div>
+        <div class="query" data-typecontrol="textarea" data-rows="1"></div>
         <pre class="correctQuery">SELECT * FROM clients WHERE cin = '12650890';</pre>
-        <pre class="userQuery">SELECT ...;</pre>
+        <pre class="userQuery">SELECT * FROM clients WHERE cin = '12650890';</pre>
       </li>
       <li>
         <div class="question">
           <p><strong>Pourquoi le genre de &laquo; Assia &raquo; est-il incorrect ? Comment le corriger ?</strong></p>
         </div>
-        <div class="query" data-typecontrol="textarea" data-rows="1" data-numquery="12"></div>
+        <div class="query" data-typecontrol="textarea" data-rows="1"></div>
         <pre class="correctQuery">UPDATE clients SET genre = 'F' WHERE cin = '12650890';</pre>
         <pre class="userQuery">UPDATE clients SET ...;</pre>
       </li>
       <li>
         <div class="question">Afficher la liste des clientes de cette agence par ordre croissant de leurs noms.</div>
-        <div class="query" data-typecontrol="textarea" data-rows="1" data-numquery="13"></div>
+        <div class="query" data-typecontrol="textarea" data-rows="1"></div>
         <pre class="correctQuery">SELECT * FROM clients WHERE genre = 'F' ORDER BY client;</pre>
         <pre class="userQuery">SELECT ...;</pre>
       </li>
@@ -446,7 +469,7 @@ VALUES ('Assia', '12650890', '52349157');</pre>
         <div class="question">Afficher la liste des clients qui disposent d'un numéro de téléphone Orange (commençant
           par 5) ou Tunisie
           Telecom (commençant par 7 ou 9).</div>
-        <div class="query" data-typecontrol="textarea" data-rows="1" data-numquery="14"></div>
+        <div class="query" data-typecontrol="textarea" data-rows="1"></div>
         <pre class="correctQuery">SELECT * FROM clients WHERE LEFT(tel, 1) IN ('5', '7', '9');</pre>
         <pre class="userQuery">SELECT ...;</pre>
       </li>
@@ -454,13 +477,13 @@ VALUES ('Assia', '12650890', '52349157');</pre>
         <div class="question">Le client &laquo; Aziz &raquo; vient de changer son numéro de téléphone à 25025637. Mettre
           à jour les
           informations de &laquo; Aziz &raquo;.</div>
-        <div class="query" data-typecontrol="textarea" data-rows="1" data-numquery="15"></div>
+        <div class="query" data-typecontrol="textarea" data-rows="1"></div>
         <pre class="correctQuery">UPDATE clients SET tel = '25025637' WHERE cin = '04202363';</pre>
         <pre class="userQuery">UPDATE clients SET ...;</pre>
       </li>
       <li>
         <div class="question">Afficher la liste des véhicules 'Clio 5' libres.</div>
-        <div class="query" data-typecontrol="textarea" data-rows="1" data-numquery="16"></div>
+        <div class="query" data-typecontrol="textarea" data-rows="1"></div>
         <pre class="correctQuery">SELECT * FROM vehicules WHERE vehicule = 'Clio 5' AND libre = 'O';</pre>
         <pre class="userQuery">SELECT ...;</pre>
       </li>
@@ -469,7 +492,7 @@ VALUES ('Assia', '12650890', '52349157');</pre>
           Ce véhicule a été loué à &laquo; Youssef &raquo; pendant 5 jours du 01/02/2022 au 06/02/2022.
           <p><strong>Insérer cette location.</strong></p>
         </div>
-        <div class="query" data-typecontrol="textarea" data-rows="2" data-numquery="17"></div>
+        <div class="query" data-typecontrol="textarea" data-rows="2"></div>
         <pre class="correctQuery">INSERT INTO locations (matricule, cin, date_location, date_retour, montant_location)
 VALUES ('207TU8780', '12569800', '2022-02-01', '2022-02-06', 5 * 70.0);</pre>
         <pre class="userQuery">INSERT INTO locations (...)
@@ -477,19 +500,19 @@ VALUES ('207TU8780', '12569800', '2022-02-01', '2022-02-06', 5 * 70.0);</pre>
       </li>
       <li>
         <div class="question">Mettre à jour la liste des véhicules.</div>
-        <div class="query" data-typecontrol="textarea" data-rows="1" data-numquery="18"></div>
+        <div class="query" data-typecontrol="textarea" data-rows="1"></div>
         <pre class="correctQuery">UPDATE vehicules SET libre = 'N' WHERE matricule = '207TU8780';</pre>
         <pre class="userQuery">UPDATE vehicules SET ...;</pre>
       </li>
       <li>
         <div class="question"><strong>Vérifier que la location a été ajoutée.</strong></div>
-        <div class="query" data-typecontrol="textarea" data-rows="1" data-numquery="19"></div>
+        <div class="query" data-typecontrol="textarea" data-rows="1"></div>
         <pre class="correctQuery">SELECT * FROM locations WHERE matricule = '207TU8780';</pre>
         <pre class="userQuery">SELECT ...;</pre>
       </li>
       <li>
         <div class="question"><strong>Vérifier que la véhicule n'est plus disponible.</strong></div>
-        <div class="query" data-typecontrol="textarea" data-rows="1" data-numquery="20"></div>
+        <div class="query" data-typecontrol="textarea" data-rows="1"></div>
         <pre class="correctQuery">SELECT * FROM vehicules WHERE matricule = '207TU8780';</pre>
         <pre class="userQuery">SELECT ...;</pre>
       </li>
@@ -502,21 +525,29 @@ VALUES ('204TU9333', '12650890', '2022-02-01', '2022-02-03', 2 * 60.0);</code></
           <p>Maintenant, il veut annuler cette location en supprimant cet enregistrement. <strong>Comment vas-t-il
               procéder ?</strong></p>
         </div>
-        <div class="query" data-typecontrol="textarea" data-rows="2" data-numquery="21"></div>
+        <div class="query" data-typecontrol="textarea" data-rows="2"></div>
         <pre class="correctQuery">INSERT INTO locations (matricule, cin, date_location, date_retour, montant_location)
 VALUES ('204TU9333', '12650890', '2022-02-01', '2022-02-03', 2 * 60.0);</pre>
         <pre class="userQuery">INSERT INTO locations (matricule, cin, date_location, date_retour, montant_location)
-  VALUES ('204TU9333', '12650890', '2022-02-01', '2022-02-03', 2 * 60.0);</pre>
+VALUES ('204TU9333', '12650890', '2022-02-01', '2022-02-03', 2 * 60.0);</pre>
       <li>
         <div class="question">Trouver le dernier <code>num_location</code> inséré dans la table <code>locations</code>.
         </div>
-        <div class="query" data-typecontrol="textarea" data-rows="1" data-numquery="22"></div>
+        <div class="query" data-typecontrol="textarea" data-rows="1"></div>
         <pre class="correctQuery">SELECT MAX(num_location) FROM locations;</pre>
         <pre class="userQuery">SELECT ...;</pre>
       </li>
       <li>
+        <div class="question">Vérifier que ce <code>num_location</code> de la table <code>locations</code> correspond
+          bien au véhicule <strong>'204TU9333'</strong> loué par <strong>'12650890'</strong>.
+        </div>
+        <div class="query" data-typecontrol="textarea" data-rows="1"></div>
+        <pre class="correctQuery">SELECT * FROM locations WHERE num_location = 16;</pre>
+        <pre class="userQuery">SELECT ...;</pre>
+      </li>
+      <li>
         <div class="question">Puis, supprimer l'enregistrement incorrect.</div>
-        <div class="query" data-typecontrol="textarea" data-rows="1" data-numquery="23"></div>
+        <div class="query" data-typecontrol="textarea" data-rows="1"></div>
         <pre class="correctQuery">DELETE FROM locations WHERE num_location = 16;</pre>
         <pre class="userQuery">DELETE FROM locations ...;</pre>
       </li>
