--- a/index.html
+++ b/index.html
@@ -32,20 +32,38 @@
       <section>
         <h3>Les Travaux Pratiques</h3>
 
-        <div class="col-md-6 col-lg-4 col-xxl-3 my-2">
-          <div class="card h-100">
-            <img src="assets/images/tp02.png" class="card-img-top border-bottom border-secondary" alt="TP n°2">
-            <div class="card-body">
-              <h5 class="card-title">TP N°2</h5>
-              <p class="card-text">CREATE TABLE / INSERT / SELECT / UPDATE / DELETE</p>
-            </div>
-            <div class="d-flex justify-content-between card-body">
-              <div>
-                <a href="tp02.html" class="btn btn-primary" target="_blank" rel="noopener noreferrer">Ouvrir...</a>
+        <div class="row">
+          <div class="col-md-6 col-lg-4 col-xxl-3 my-2">
+            <div class="card h-100">
+              <img src="assets/images/tp02.png" class="card-img-top border-bottom border-secondary" alt="TP n°2">
+              <div class="card-body">
+                <h5 class="card-title">TP N°2</h5>
+                <p class="card-text">Location de véhicules</p>
+                <p class="card-text">CREATE TABLE / INSERT / SELECT / UPDATE / DELETE</p>
+              </div>
+              <div class="d-flex justify-content-between card-body">
+                <div>
+                  <a href="tp02.html" class="btn btn-primary" target="_blank" rel="noopener noreferrer">Ouvrir...</a>
+                </div>
               </div>
             </div>
           </div>
-        </div>
+
+          <div class="col-md-6 col-lg-4 col-xxl-3 my-2">
+            <div class="card h-100">
+              <img src="assets/images/tp03.png" class="card-img-top border-bottom border-secondary" alt="TP n°3">
+              <div class="card-body">
+                <h5 class="card-title">TP N°3</h5>
+                <p class="card-text">Bibliothèque</p>
+                <p class="card-text">CREATE TABLE / INSERT / SELECT</p>
+              </div>
+              <div class="d-flex justify-content-between card-body">
+                <div>
+                  <a href="tp03.html" class="btn btn-primary" target="_blank" rel="noopener noreferrer">Ouvrir...</a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
   </main>
