--- a/index.html
+++ b/index.html
@@ -80,6 +80,20 @@
               </div>
             </div>
           </div>
+
+          <div class="col-md-6 col-lg-4 col-xxl-3 my-2">
+            <div class="card h-100">
+              <img src="assets/images/tp04.png" class="card-img-top border-bottom border-secondary" alt="TP n°3">
+              <div class="card-body">
+                <h5 class="card-title">Correction DC</h5>
+              </div>
+              <div class="d-flex justify-content-between card-body">
+                <div>
+                  <a href="dc02.html" class="btn btn-primary" target="_blank" rel="noopener noreferrer">Ouvrir...</a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
   </main>
