--- a/index.html
+++ b/index.html
@@ -83,6 +83,22 @@
 
           <div class="col-md-6 col-lg-4 col-xxl-3 my-2">
             <div class="card h-100">
+              <img src="assets/images/tp04.png" class="card-img-top border-bottom border-secondary" alt="TP n°5">
+              <div class="card-body">
+                <h5 class="card-title">TP N°5</h5>
+                <p class="card-text">Hospitalisation</p>
+                <p class="card-text">CREATE TABLE / INSERT / SELECT / UPDATE / DELETE</p>
+              </div>
+              <div class="d-flex justify-content-between card-body">
+                <div>
+                  <a href="tp05.html" class="btn btn-primary" target="_blank" rel="noopener noreferrer">Ouvrir...</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4 col-xxl-3 my-2">
+            <div class="card h-100">
               <img src="assets/images/tp04.png" class="card-img-top border-bottom border-secondary" alt="TP n°3">
               <div class="card-body">
                 <h5 class="card-title">Correction DC</h5>
