--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="row">
           <div class="col-md-6 col-lg-4 col-xxl-3 my-2">
             <div class="card h-100">
-              <img src="assets/images/tp02.png" class="card-img-top border-bottom border-secondary" alt="TP n°2">
+              <img src="assets/images/tp.png" class="card-img-top border-bottom border-secondary" alt="TP n°2">
               <div class="card-body">
                 <h5 class="card-title">TP N°2</h5>
                 <p class="card-text">Location de véhicules</p>
@@ -51,7 +51,7 @@
 
           <div class="col-md-6 col-lg-4 col-xxl-3 my-2">
             <div class="card h-100">
-              <img src="assets/images/tp03.png" class="card-img-top border-bottom border-secondary" alt="TP n°3">
+              <img src="assets/images/tp.png" class="card-img-top border-bottom border-secondary" alt="TP n°3">
               <div class="card-body">
                 <h5 class="card-title">TP N°3</h5>
                 <p class="card-text">Bibliothèque</p>
@@ -67,7 +67,7 @@
 
           <div class="col-md-6 col-lg-4 col-xxl-3 my-2">
             <div class="card h-100">
-              <img src="assets/images/tp04.png" class="card-img-top border-bottom border-secondary" alt="TP n°3">
+              <img src="assets/images/tp.png" class="card-img-top border-bottom border-secondary" alt="TP n°3">
               <div class="card-body">
                 <h5 class="card-title">TP N°4</h5>
                 <p class="card-text">Cinéma</p>
@@ -83,7 +83,7 @@
 
           <div class="col-md-6 col-lg-4 col-xxl-3 my-2">
             <div class="card h-100">
-              <img src="assets/images/tp04.png" class="card-img-top border-bottom border-secondary" alt="TP n°5">
+              <img src="assets/images/tp.png" class="card-img-top border-bottom border-secondary" alt="TP n°5">
               <div class="card-body">
                 <h5 class="card-title">TP N°5</h5>
                 <p class="card-text">Hospitalisation</p>
@@ -99,7 +99,7 @@
 
           <div class="col-md-6 col-lg-4 col-xxl-3 my-2">
             <div class="card h-100">
-              <img src="assets/images/tp04.png" class="card-img-top border-bottom border-secondary" alt="TP n°3">
+              <img src="assets/images/dc.png" class="card-img-top border-bottom border-secondary" alt="TP n°3">
               <div class="card-body">
                 <h5 class="card-title">Correction DC</h5>
               </div>
